--- a/login.html
+++ b/login.html
@@ -46,44 +46,60 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
-                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
+                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn"
+                        type="submit">Signup</button></a>
             </div>
         </div>
     </nav>
     <!-- end navbar -->
 
-    <div class="container text-center ">
-        <form class="login-form">
-            <img class="mb-4" src="./assets/images/logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-
-            <div class="input-field">
-                <i class="fas fa-user" aria-hidden="true"></i>
-                <input type="text" placeholder="Enter Username" id="username" name="username" required>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7">
+                <img src="./assets/images/login-signup/login.svg" alt="" class="img-fluid">
             </div>
+            <div class="col-md-5">
+                <form class="row g-3 needs-validation" novalidate>
+                    <div class="col-12">
+                        <label for="inputEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                        <div class="invalid-feedback">
+                            Please type a valid email.
+                        </div>
 
-            <div class="input-field">
-                <i class="fa fa-lock" aria-hidden="true"></i>
-                <input type="password" placeholder="Enter Password" id="password" name="password" required>
-            </div>
+                    </div>
+                    <div class="col-12">
+                        <label for="inputPassword" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="inputPassword" required>
+                        <div class="invalid-feedback">
+                            You must enter password.
+                        </div>
+                    </div>
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="rememberMe">
+                        <label class="form-check-label" for="rememberMe">
+                            Remember Me
+                        </label>
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Sign in</button>
+                        <p>New user? <a href="./signup.html">Signup here</a></p>
+                    </div>
 
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
+                </form>
             </div>
-            <button class="btn btn-md btn-primary" type="submit">Sign in</button>
-            <p>Don't have an accountyet? <a href="./signup.html">Sign Up</a></p>
-            
-         
-        </form>
+        </div>
+
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
 
-
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
