--- a/signup.html
+++ b/signup.html
@@ -46,59 +46,89 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">FAQs</a>
                     </li>
-                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn" type="submit">Signup</button></a>
+                </ul><a href="./signup.html"><button class="btn btn-outline-success signup-btn"
+                        type="submit">Signup</button></a>
             </div>
         </div>
     </nav>
     <!-- end navbar -->
 
-    <div class="container text-center ">
-        <form class="login-form">
-            <img class="mb-4" src="./assets/images/logo.svg" alt="" width="72" height="57">
-            <h1 class="h3 mb-3 fw-normal">Please Sign Up</h1>
-            <div class="input-field">
-                <i class="fa fa-user"></i>
-                <input type="text" placeholder="Enter Full Name" id="fullname" name="fullname" required>
+    <div class="container">
+        <div class="row " >
+            <div class="col-md-6">
+                <img src="./assets/images/login-signup/signup.svg" alt="" class="img-fluid">
             </div>
-            <div class="input-field">
-                <i class="fa fa-envelope"></i>
-                <input type="email" placeholder="Email" id="email" name="email" required>
+            <div class="col-md-6">
+                <form class="row g-2 needs-validation" novalidate>
+                    <div class="col-md-8">
+                        <label for="inputFullName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="inputFullName" required>
+                        <div class="invalid-feedback">
+                           Please enter your name
+                        </div>
+                    </div>
+                    <div class="col-md-8">
+                        <label for="inputEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail" required>
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <div class="invalid-feedback">
+                            Please enter a valid email
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputPhoneNo" class="form-label">Phone No.</label>
+                        <input type="tel" class="form-control" id="inputPhoneNo" placeholder="e.g. 8825069299" required>
+                        <div class="invalid-feedback">
+                            Please enter a valid 10-digit phone no.
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputLicenseNo" class="form-label">License No</label>
+                        <input type="text" class="form-control" id="inputLicenseNo" required>
+                        <div class="invalid-feedback">
+                            Please enter your license no
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputPassword1" class="form-label">Password</label>
+                        <input type="password" id="inputPassword1" class="form-control"
+                            aria-describedby="passwordHelpBlock" required>
+                        <div id="passwordHelpBlock" class="form-text">
+                            Your password must be 8-20 characters long.
+                        </div>
+                        <div class="invalid-feedback">
+                            Please enter your password
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="inputPassword2" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="inputPassword2" required>
+                        <div class="invalid-feedback">
+                            Please retype your password
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="mb-3">
+                            <label for="formFile" class="form-label">Upload Driving License</label>
+                            <input class="form-control" type="file" id="formFile" required>
+                            <div class="invalid-feedback">
+                                Please upload your driving license
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary">Sign up</button>
+                        <p>Already a user? <a href="./login.html">Login here</a></p>
+                    </div>
+                </form>
             </div>
-            <div class="input-field">
-                <i class="fa fa-phone-alt"></i>
-                <input type="tel" placeholder="Phone No" id="phone_no" name="phone_no" required>
-            </div>
-            <div class="input-field">
-                <i class="fas fa-map-marker-alt"></i>
-                <input type="text" placeholder="Address" id="address" name="address" required>
-            </div>
-            <div class="input-field">
-                <i class="fas fa-id-card"></i>
-                <input type="text" placeholder="Liscence no" id="license_no" name="liscence_no" required>
-            </div>
-            <div class="input-field">
-                <i class="fa fa-lock"></i>
-                <input type="password" placeholder="Password" id="password1" name="password" required>
-            </div>
-            <div class="input-field">
-                <i class="fa fa-lock"></i>
-                <input type="password" placeholder="Confirm Password" id="password2" name="password" required>
-            </div>
-            <div class="input">
-                <label for="exampleFormControlFile1" class="fs-5">Upload your identity card (eg. Aadhar card, voted id etc)</label><br>
-                <input type="file" class=" m-2" id="photo" accept=".jpg, .png, .jpeg" onchange="validate(this);"
-                    data-width="160" data-height="140" data-size="75" data-preview="imagePreview" name="photo"
-                    required="">
-            </div>
-            <button class="btn btn-md btn-primary" type="submit">Sign up</button>
-            <p>Already a user? <a href="./login.html">Login here</a></p>
-
-        </form>
+        </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
         crossorigin="anonymous"></script>
+    <script src="./assets/js/main.js"></script>
 
 
 </body>
