--- a/profile-page.html
+++ b/profile-page.html
@@ -54,7 +54,48 @@
     <!-- end navbar -->
 
     <div class="container">
-       
+
+        <div class="row">
+            <div class="col-md-3 pt-5 ">
+                <div class="text-center m-1">
+                    <img src="./assets/images/person.jpg" alt="" class=" img-fluid profile-image">
+                </div>
+
+                <div class=" p-1">
+                    <p class=" p-1 fs-4 m-1"> Aijaz Ahmad Wani</p>
+                    <button type="button" class="btn btn-secondary w-100 my-2">Edit Profile</button>
+                    <p class=" p-1  m-1"> <i class="far fa-envelope"></i> aijazahmad9864@gmail.com</p>
+                    <p class=" p-1 m-1"><i class="fas fa-phone-alt"></i> +91-8825069299</p>
+                    <p class=" p-1 m-1"><i class="far fa-id-badge"></i> JK-DJF48758</p>
+                    <p class=" p-1 m-1"><i class="fas fa-map-marker-alt"></i> Nishat, Srinagar</p>
+                </div>
+            </div>
+            <div class="col-md-9 pt-1 border mt-1">
+                <h1 class="h2 text-center mb-3">History</h1>
+                <div class="timeline">
+                    <div class="timeline-container left">
+                        <div class="content">
+                            <h5>Mahindra XUV 100</h5>
+                            <p class="m-0">Date: 15/5/2021</p>
+                            <p class="m-0">4 days & 3 nights</p>
+                            <p class="m-0">Transacton ID: 3764DKJFJ4UR476</p>
+                            <p class="m-0">Cost: $1400</p>
+                        </div>
+                    </div>
+                    <div class="timeline-container right">
+                        <div class="content">
+                            <h5>Maruti Suzuki 800</h5>
+                            <p class="m-0">Date: 15/5/2021</p>
+                            <p class="m-0">4 days & 3 nights</p>
+                            <p class="m-0">Transacton ID: 3764DKJFJ4UR476</p>
+                            <p class="m-0">Cost: $1400</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
@@ -64,5 +105,3 @@
 
 
 </body>
-
-</html>
