removed profile image and discount

--- a/profile-page.html
+++ b/profile-page.html
@@ -57,10 +57,6 @@
 
         <div class="row">
             <div class="col-md-3 pt-5 ">
-                <div class="text-center m-1">
-                    <img src="./assets/images/person.jpg" alt="" class=" img-fluid profile-image">
-                </div>
-
                 <div class=" p-1">
                     <p class=" p-1 fs-4 m-1"> Aijaz Ahmad Wani</p>
                     <button type="button" class="btn btn-secondary w-100 my-2">Edit Profile</button>
@@ -70,8 +66,8 @@
                     <p class=" p-1 m-1"><i class="fas fa-map-marker-alt"></i> Nishat, Srinagar</p>
                 </div>
             </div>
-            <div class="col-md-9 pt-1 border mt-1">
-                <h1 class="h2 text-center mb-3">History</h1>
+            <div class="col-md-9 pt-1 border mt-1 p-1">
+                <h1 class="h2 text-center my-3">History</h1>
                 <div class="timeline">
                     <div class="timeline-container left">
                         <div class="content">
