--- a/vehicle-detail.html
+++ b/vehicle-detail.html
@@ -155,8 +155,7 @@
             </div>
             <div class="col-md-5 shadow mt-1">
                 <h4 class=" fs-2">Maruti Alto K10</h4>
-                <p class="fs-3 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i> <span
-                        class="fs-6 fw-light text-decoration-line-through">₹ 1500</span></p>
+                <p class="fs-3 fw-bolder">₹ 1100 <i class="fs-6 fw-light">/month</i></p>
                 <p class="fs-6 text-muted">Inclusive of all taxes</p>
                 <button type="button" class="btn btn-primary w-100 btn-lg">Book Now</button>
                 <p style="margin-top: 1rem;"> <i class="fas fa-check-circle m-1" style="color:green;"></i>Extend any
